--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,73 +1,120 @@
+/* For Index */
 body {
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    color: #777;
-    background: #777;
-    width: 960px;
-    font-size: 18px;
+    background-color: #ffffff;
+    border-color: #dddddd;
 }
 
-header, nav, section, aside, footer{
-    background: #ebebeb;
-}
-
-article{
-    color: #ebebeb;
-    background: #777;
-    text-align: left;
-}
-
-h1, p {
-    color: #777;
-    background: #ebebeb;
-}
-
-section {
-    width: 495px;
-    margin-left: 50%;
-    margin-right: 50%;
-    margin-top: 20%;
-    margin-bottom:50%;
-}
-
-header{
-    padding-top: 1%;
-    padding-left: 10%;
-    padding-right: 50%;
-    border-width: 0px 0px 4px 0px;
-    border-style: solid;
-    border-color: #DBDBDC;
-}
-
-/*Header*/
-.a{
-    text-indent: 10%;  
-}
-
-div.b{
-    background-color: #ebebeb;
-    border-color: #777;
-}
-
-
-footer{
-    /*others*/
-    position: absolute;
-    bottom: 0;
-    text-align:center;
+#navBar{
+    text-align: right;
+    background-color: #ffffff;
+    border-bottom-style: solid;
+    border-color: #cccccc;
+    border-bottom-width: 2px;
+    height: 81px;
+    width: 100%;
+    padding-top:15px;
+    padding-bottom:15px;
     
-    font-size: 16px;
+}
 
-    /*padding*/
-    padding-top: 2.5%;
-    padding-right:47%;
-    padding-left:47%;
-    padding-bottom: 1%;
+#navTypes{
+    margin-top: 2.5%;
+    margin-right: 10px;
+    float: right;
+}
 
-    /*border*/
+.heading{
+    font-family: 'Georgia', Times, Times New Roman, serif;
+    font-size: 32px;
+}
+
+#name{
+    z-index:1;
+    background-color: #4aaaa5;
+    float: left;
+    margin-left: 14%;
+    margin-top: 0;
+    padding: 39px 14px 39.5px 14px;
+    color: white;
+    position: absolute;
+    top: 0;
+}
+
+#heading2{
+    color: #4aaaa5;
+    /* float: left; */
+    padding-bottom: 20px;
+    overflow: auto;
+    padding-right: 70%;
     border-style: solid;
-    border-bottom: 0px;
-    border-left:0px;
-    border-right:0px;
-    border-top-color: #88CFEE;
-    border-width: 15px 0px 0px 0px;
+    border-color: #dddddd;
+    border-bottom-width: 2px;
+    margin-left: 2%;
+    width: 25%;
+    padding-top: 15px;
+}
+
+#mainContent{
+    background-color: #ffffff;
+    border-style: solid;
+    border-color: #dddddd;
+    border-width: 1px;
+    width: 960px;
+    height:475px;
+    margin-top: 2%;
+    margin-left: 14%;
+}
+
+.para{
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    color:#777777;
+    margin-left: 2%;
+    margin-right: 2%;
+    clear: right;
+    margin-top: 2%;
+    
+}
+
+img{
+    /* margin-top: 25px; */
+    margin-left: 4%;
+    margin-right: 4%;
+    float: left;
+    width: 200px;
+    height: auto;
+    }
+
+#bio{
+    text-align: left;
+    line-height: 25px;
+}
+
+#footer{
+background-color: #666666;
+color: white;
+text-align: center;
+position: fixed;
+bottom: 0;
+width:100%;
+padding-top: 2%;
+padding-bottom: 7px;
+border-style: solid;
+border-color: #4aaaa5;
+border-top-width: 4px;
+}
+
+/* For Contact Page */
+.inputs {
+margin-left: 2%;
+margin-top:4%;
+font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+color:#777777;
+}
+
+#submit{
+    background-color: #4aaaa5;
+    border: none;
+    color: white;
+    height: 30px;
+    width: 60px;
 }
