--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,120 +1,288 @@
-/* For Index */
-body {
-    background-color: #ffffff;
-    border-color: #dddddd;
+body{
     background: url("../images/what-the-hex.png");
 }
 
-#navBar{
-    text-align: right;
-    background-color: #ffffff;
-    border-bottom-style: solid;
-    border-color: #cccccc;
-    border-bottom-width: 2px;
-    height: 81px;
+
+/* Navigation Bar */
+.navBar{
+    background-color: white;
+    border-width: 0px 0px 2px 0px;
+    border-bottom-color: #dddddd;
+    border-style: solid;
     width: 100%;
-    padding-top:15px;
-    padding-bottom:15px;
+    height: 132px;
 }
 
-#navTypes{
-    margin-top: 2.5%;
-    margin-right: 10px;
+.navType{
+    margin-top: 10px;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    padding: 40px 40px 40px 0px;
+    color: #777777;
     float: right;
+    position: relative;
 }
 
-.heading{
-    font-family: 'Georgia', Times, Times New Roman, serif;
-    font-size: 32px;
-}
-
-#name{
-    z-index:1;
+.name{
     background-color: #4aaaa5;
-    float: left;
-    margin-left: 14%;
-    margin-top: 0;
-    padding: 39px 14px 39.5px 14px;
     color: white;
+    z-index: 1;
+    margin-left:160px;
+    padding: 37px 30px;
+    font-family: "Georgia", Times, Times New Roman, serif;
     position: absolute;
     top: 0;
 }
 
-#heading2{
-    color: #4aaaa5;
-    /* float: left; */
-    padding-bottom: 20px;
-    overflow: auto;
-    padding-right: 70%;
-    border-style: solid;
-    border-color: #dddddd;
-    border-bottom-width: 2px;
-    margin-left: 2%;
-    width: 25%;
-    padding-top: 15px;
-}
-
-#mainContent{
+/* main content */
+.main-content{
     background-color: #ffffff;
     border-style: solid;
     border-color: #dddddd;
-    border-width: 1px;
+    border-width: 1px;   
     width: 960px;
-    height:475px;
-    margin-top: 2%;
-    margin-left: 14%;
+    height: auto;
+    margin-top: 30px;
+    margin-bottom: 100px;
+}
+
+/* about me */
+.heading2{
+    color: #4aaaa5;
+    font-family: "Georgia", Times, Times New Roman, serif;
+    font-size: 32px;
+    border-style: solid;
+    border-color: #dddddd;
+    border-width: 0px 0px 2px 0px;
+    padding-right: 500px;
+    margin-top: 20px;
+    margin-left: 25px;
+    margin-right: 40px;
 }
 
 .para{
+   margin-left: 2%;
+   margin-right: 2%;
+   margin-top: 2%;
+   text-align: left;
+    line-height: 30px;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color:#777777;
-    margin-left: 2%;
-    margin-right: 2%;
     clear: right;
-    margin-top: 2%;
-    
+    padding-top: 1.5%;
 }
 
 img{
-    /* margin-top: 25px; */
-    margin-left: 4%;
+    margin-left: 2%;
     margin-right: 4%;
+    margin-top: 20px;
     float: left;
-    width: 200px;
-    height: auto;
+}
+
+.color{
+    color: #dddddd;
+}
+
+/* footer */
+footer{
+    background-color: #666666;
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    color: #dddddd;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    text-align: center;
+    left: 0;
+    border-style: solid;
+    border-color: #4aaaa5;
+    border-width: 4px 0px 0px 0px;
+    font-size: 2px;
+}
+
+@media screen and (max-width: 980px){
+    body{
+        width: 100%;
     }
 
-.bio{
-    text-align: left;
-    line-height: 25px;
+    .name{
+        left: 25px;
+        margin-left: 40px;
+        /* text-align: center; */
+        padding: 37px 30px;
+    }
+
+    .main-content{
+        /* height: 850px;
+        margin-bottom: 115px; */
+        margin-left: 65px;
+        margin-bottom: 100px;
+        width: 650px;
+        height: auto;
+    }
+
+    .heading2{
+        padding-right: 200px;
+    }
 }
 
-#footer{
-background-color: #666666;
-color: white;
-text-align: center;
-position: fixed;
-bottom: 0;
-width:100%;
-padding-top: 2%;
-padding-bottom: 7px;
-border-style: solid;
-border-color: #4aaaa5;
-border-top-width: 4px;
+@media screen and (max-width: 768px){
+    body{
+        width: 100%;
+    }
+
+    .main-content{
+        width: 710px;
+        height: auto;
+        margin-bottom: 115px;
+        right: 35px;
+        /* margin-right: auto; */
+        position: relative;
+    }
+
+    .name{
+        /* left: 25px; */
+        margin-left: 8px;
+        /* text-align: center; */
+        padding: 37px 30px;
+    }
+
+    img{
+        width: 325px;
+        height: auto;
+    }
+
+    .heading2{
+        padding-right: 200px;
+        margin-left: 3%;
+        left: 8px;
+    }
+} 
+
+
+@media screen and (max-width: 640px){
+    body{
+        width: 100%;
+    }
+
+    .name{
+        width: 100%x;
+        /* margin: 0% auto; */
+        text-align: center;
+        padding: 10px 30px;
+        /* right: 60px; */
+        /* align-content: center; */
+        position: static;
+        margin-left: 0px;
+        
+    }
+    
+    .navBar{
+        height: 70px;
+    }
+
+    .navType{
+       margin-top: 0px;
+       /* padding-right: 225px; */
+       left: 225px;
+       position: absolute;
+       top: 60px;
+       
+    }
+
+    .heading2{
+        padding-right: 200px;
+        margin-left: 3%;
+        left: 15px;
+    }
+
+    .main-content{
+        /* height: 1300px; */
+        margin-bottom: 115px;
+        /* margin-left:20px; */
+        width: 535px;
+        height: auto;
+        position: absolute;
+        margin-right: 20px;
+    }
+
+    img{
+     clear: both;
+     width: 475px;
+     height: auto;
+     margin-left: 3%;
+     margin-bottom: 23px;
+    }
+
+    .para{
+        left:4px;
+        margin-left: 3%;
+    }
 }
 
-/* For Contact Page */
-.inputs {
-margin-left: 2%;
-margin-top:4%;
-font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-color:#777777;
+/* wanted to see what it looked like on my phone */
+@media screen and (max-width: 375px){
+    body{
+        width: 100%;
+    }
+
+    .navType{
+        margin: 0px 0px 0px 50px;
+        text-align: center;
+
+        /* padding-right: 225px; */
+        /* left: 225px; */
+        position: absolute;
+        /* width: 50px; */
+        top: 60px;
+        left: 10px;
+        right: 30px;
+        /* top: 60px; */
+        
+     }
+
+     .main-content{
+        /* height: 1300px; */
+        /* margin-bottom: 115px; */
+        
+        width: 340px;
+        height: auto;
+        /* position: absolute; */
+        right: 20px;
+        /* align-content: center; */
+        /* margin-right: 20px;*/
+        /* margin-left: 20px;  */
+        margin-left: 0px;
+        margin-right: 0px;
+        clear: right;
+        /* float: right; */
+        
+    }
+
+    .heading2{
+        padding-right: 200px;
+        /* padding: 0px 200px 0px 0px; */
+        margin-left: 2%;
+        left: 8px;
+        /* margin-right: 0px; */
+        /* margin-right: 40px; */
+        /* width: 300px; */
+        position: relative;
+        /* word-spacing: 50px; */
+        /* display: inline-block; */
+        /* clear: right; */
+       /* line-height: 70px; */
+       /* float: left; */
+    }
+
+    img{
+        clear: both;
+        width: 285px;
+        height: auto;
+        margin-left: 3%;
+        margin-bottom: 23px;
+       }
+
 }
 
-#submit{
-    background-color: #4aaaa5;
-    border: none;
-    color: white;
-    height: 30px;
-    width: 60px;
-}
+
+
