--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,6 @@ body{
     background: url("../images/what-the-hex.png");
 }
 
-
 /* Navigation Bar */
 .navBar{
     background-color: white;
@@ -99,6 +98,36 @@ footer{
     font-size: 2px;
 }
 
+
+
+/* Portfolio */
+.main-space{
+    width: 960px;
+    height: 695px;
+}
+
+
+/* Contact Page */
+.inputs {
+    margin-left: 2%;
+    margin-top:4%;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    color:#777777;
+    }
+    
+.submit{
+    background-color: #4aaaa5;
+    border: none;
+    color: white;
+    height: 30px;
+    width: 60px;
+}
+
+.main-space2{
+    width: 960px;
+    height: 530px;
+}
+
 @media screen and (max-width: 980px){
     body{
         width: 100%;
@@ -122,6 +151,26 @@ footer{
 
     .heading2{
         padding-right: 200px;
+    }
+
+    .input{
+        border-color: #dddddd;
+        border-style: solid;
+        border-width: 1px;
+        width: 600px;
+    } 
+
+    .submit{
+        
+        margin-bottom: 7px;
+    }
+
+    .main-space{
+        height: 945px;
+    }
+
+    .main-space2{
+        height: 510px;
     }
 }
 
@@ -156,6 +205,30 @@ footer{
         margin-left: 3%;
         left: 8px;
     }
+
+    .main-space{
+        height: 945px;
+    }
+
+    .input{
+        border-color: #dddddd;
+        border-style: solid;
+        border-width: 1px;
+        width: 600px;
+    } 
+
+    .inputs{
+        margin-left: 30px;
+    }
+
+    .submit{
+        margin-bottom: 7px;
+    }
+
+    .main-space2{
+        width: 710px;
+        height: 500px;
+    }
 } 
 
 
@@ -166,11 +239,8 @@ footer{
 
     .name{
         width: 100%x;
-        /* margin: 0% auto; */
         text-align: center;
         padding: 10px 30px;
-        /* right: 60px; */
-        /* align-content: center; */
         position: static;
         margin-left: 0px;
         
@@ -217,6 +287,18 @@ footer{
         left:4px;
         margin-left: 3%;
     }
+
+    .main-space{
+        width: 535px;
+        height: 500px;
+    }
+
+    .input{
+        border-color: #dddddd;
+        border-style: solid;
+        border-width: 1px;
+        width: 475px;
+    } 
 }
 
 /* wanted to see what it looked like on my phone */
@@ -228,50 +310,27 @@ footer{
     .navType{
         margin: 0px 0px 0px 50px;
         text-align: center;
-
-        /* padding-right: 225px; */
-        /* left: 225px; */
         position: absolute;
-        /* width: 50px; */
         top: 60px;
         left: 10px;
         right: 30px;
-        /* top: 60px; */
-        
      }
 
      .main-content{
-        /* height: 1300px; */
-        /* margin-bottom: 115px; */
-        
         width: 340px;
-        height: auto;
-        /* position: absolute; */
+        height: auto; 
         right: 20px;
-        /* align-content: center; */
-        /* margin-right: 20px;*/
-        /* margin-left: 20px;  */
         margin-left: 0px;
         margin-right: 0px;
         clear: right;
-        /* float: right; */
-        
     }
 
     .heading2{
         padding-right: 200px;
-        /* padding: 0px 200px 0px 0px; */
         margin-left: 2%;
         left: 8px;
-        /* margin-right: 0px; */
-        /* margin-right: 40px; */
-        /* width: 300px; */
         position: relative;
-        /* word-spacing: 50px; */
-        /* display: inline-block; */
-        /* clear: right; */
-       /* line-height: 70px; */
-       /* float: left; */
+        width: 300px;
     }
 
     img{
@@ -282,6 +341,20 @@ footer{
         margin-bottom: 23px;
        }
 
+       .main-space{
+           height: 400px;
+       }
+
+       .input{
+        border-color: #dddddd;
+        border-style: solid;
+        border-width: 1px;
+        width: 275px;
+    }
+    
+    .main-space2{
+        height: 500px;
+    }
 }
 
 
