--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,7 +81,7 @@ img{
     color: #dddddd;
 }
 
-/* footer */
+
 footer{
     background-color: #666666;
     width: 100%;
@@ -98,14 +98,11 @@ footer{
     font-size: 2px;
 }
 
-
-
 /* Portfolio */
 .main-space{
     width: 960px;
     height: 695px;
 }
-
 
 /* Contact Page */
 .inputs {
@@ -114,7 +111,7 @@ footer{
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color:#777777;
     }
-    
+
 .submit{
     background-color: #4aaaa5;
     border: none;
@@ -136,13 +133,10 @@ footer{
     .name{
         left: 25px;
         margin-left: 40px;
-        /* text-align: center; */
         padding: 37px 30px;
     }
 
     .main-content{
-        /* height: 850px;
-        margin-bottom: 115px; */
         margin-left: 65px;
         margin-bottom: 100px;
         width: 650px;
@@ -160,8 +154,7 @@ footer{
         width: 600px;
     } 
 
-    .submit{
-        
+    .submit{ 
         margin-bottom: 7px;
     }
 
@@ -238,7 +231,7 @@ footer{
     }
 
     .name{
-        width: 100%x;
+        width: 100%;
         text-align: center;
         padding: 10px 30px;
         position: static;
@@ -252,11 +245,9 @@ footer{
 
     .navType{
        margin-top: 0px;
-       /* padding-right: 225px; */
        left: 225px;
        position: absolute;
        top: 60px;
-       
     }
 
     .heading2{
