--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,6 +125,29 @@ footer{
     height: 530px;
 }
 
+/* added to portfolio */
+#trivia_game{
+    border-radius: 10px;
+    border-color: #dddddd;
+    border-width: 2px;
+    border-style: solid;
+    width: 200px;
+    height: auto;
+    background-image: url("../images/latest-blue-vintage-background-background-patterns-others.jpg");
+    margin-top: 30px;
+    margin-left: 3px;
+    font-size: 20px;
+    text-align: center;
+    font-family: 'Questrial', sans-serif;
+    padding-top: 35px;
+    padding-bottom: 35px;
+
+}
+
+a:link{
+    color: #777777;
+}
+
 @media screen and (max-width: 980px){
     body{
         width: 100%;
